[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "jlab_method_pull"
version = "0.1.0"
description = "Pull class methods into Jupyter cells and inject edited versions back — with optional persistence to source files"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
jupyter = ["ipython"]

[project.urls]
Homepage = "https://github.com/schmidi314/jlab_method_pull"
Issues = "https://github.com/schmidi314/jlab_method_pull/issues"

[tool.setuptools]
py-modules = ["jlab_method_pull"]
